--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     "preset": "jest-expo",
     "collectCoverageFrom": [
       "{src,app}/**/*.{ts,tsx}"
+    ],
+    "setupFiles": [
+      "<rootDir>/setup-jest.tsx"
     ]
   },
   "private": true
