--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "digital-nomad-app",
+    "name": "Nomad",
     "slug": "digital-nomad-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -15,9 +15,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#1B1B1B"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.digitalnomadapp"
     },
     "web": {
       "bundler": "metro",
